# VPN_bot

./: Dockerfile_admin_bot  Dockerfile_bot  README.md  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  settings.py
bot/: admin_bot.py  bot.py  messages.py  utils.py
db/: alembic.ini  base.py  models.py  queries.py
db/migrations/versions/: README
infra/: .env.sample  docker-compose.yml  webserver_script.py
infra/docker/admin_bot/: Dockerfile_admin_bot
infra/docker/bot/: Dockerfile_bot  docker-entrypoint.sh
